# pam-http

./: .gitignore  .gitmodules  CMakeLists.txt  CPackLists.cmake  LICENCE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake-modules/: gmock.cmake  httpmockserver.cmake
docker/: Dockerfile
docker/local/cpp-dev/: Dockerfile
include/pam-http/: http_auth.h  http_client.h  options.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash
src/: CMakeLists.txt  http_auth.c  http_client.c  options.c  pam_account.c  pam_auth.c  pam_password.c  pam_session.c
tests/: CMakeLists.txt  gtest_main.cpp  http_auth_test.cpp  http_client_test.cpp  options_test.cpp
tests/http_auth/: CMakeLists.txt  http_auth_test.cpp
tests/http_client/: CMakeLists.txt  http_client_test.cpp
tests/options/: CMakeLists.txt  options_test.cpp
tests/stubs/: pam.c
